@@ -30,6 +30,8 @@ Version 1.0.7.20
        Delphi, CSS,, HTML, PHP, PHP (Brief), QBasic, Ruby, XML
   -  Added a possibility to force generation of a surrounding tag around
      the highlighted source
+  -  Applied fix for additional keywords for the bash language
+     (cf. http://bash.thefreebizhost.com/bash_geshi.php, BenBE)
   -  Added language files
      * Motorola 68k Assembler (for MC68HC908GP32 Microcontroller) (BenBE)
 Version 1.0.7.19
